<resources>
    <string name="app_name">StoryAppDicoding</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="error_password">Password must be 8 character</string>
    <string name="error_password_empty">Password must be filled</string>
    <string name="error_email">Email must be on pattern</string>
    <string name="error_email_empty">Email must be filled</string>
    <string name="registerHead">Register :</string>
    <string name="dont_have_account">Dont Have Account?</string>
    <string name="error_empty_name">Name must be filled</string>
    <string name="name">name</string>
    <string name="add_button_text">Add Story</string>
    <string name="camera_button_text">Camera</string>
    <string name="add_story_description_hint">fill the description</string>
    <string name="story_iv_desc">Image</string>
    <string name="gallery_button_text">GALLERY</string>
    <string name="error_add_story">Fill the blank</string>
    <string name="error_file_empty">File is not attached</string>
    <string name="button_available">Login</string>
    <string name="button_not_available">Fill First</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>