<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/activity_register_scene"
        tools:context=".view.register.RegisterActivity">

        <ImageView
            android:id="@+id/taskbarLogo"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/registerHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="50dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/registerHead"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/registerEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taskbarLogo" />

        <com.example.storyappdicoding.view.custview.EditName
            android:id="@+id/registerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="25dp"
            android:hint="@string/name"
            android:padding="15dp"
            android:textColor="@color/gray_200"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/registerEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerHead" />

        <com.example.storyappdicoding.view.custview.EditEmail
            android:id="@+id/registerEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="25dp"
            android:hint="@string/email"
            android:padding="15dp"
            android:textColor="@color/gray_200"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerName" />

        <com.example.storyappdicoding.view.custview.EditPassword
            android:id="@+id/registerPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:padding="15dp"
            android:textColor="@color/gray_200"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerEmail" />

        <com.example.storyappdicoding.view.custview.ButtonCustom
            android:id="@+id/btRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:flow_verticalBias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerPassword" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.motion.widget.MotionLayout>