<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_login_scene"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ed_login_email"
        app:srcCompat="@drawable/logo"/>

    <com.example.storyappdicoding.view.custview.EditEmail
        android:alpha="0"
        android:id="@+id/ed_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/email"
        android:padding="15dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/gray_200"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/ed_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintVertical_bias="0" />

    <com.example.storyappdicoding.view.custview.EditPassword
        android:alpha="0"
        android:id="@+id/ed_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/password"
        android:padding="15dp"
        android:textColor="@color/gray_200"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/bt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email"
        app:layout_constraintVertical_bias="0" />

    <com.example.storyappdicoding.view.custview.ButtonCustom
        android:alpha="0"
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@id/btRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

    <TextView
        android:alpha="0"
        android:id="@+id/btRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:text="@string/dont_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>